# InhibitionInducedDevaluation

./: .gitignore  README.md  experiment2.py  pyproject.toml  setup_env.sh
data/: cr6_data.yml  cr7_data.yml  data.yml
data/CR6/: S1.csv  S190.csv  S192.csv  S251.csv  S306.csv  S327.csv  S336.csv  S341.csv  S342.csv  S343.csv  S348.csv  S35.csv  S364.csv  S367.csv  S368.csv  S377.csv  S379.csv  S380.csv  S394.csv  S395.csv  S396.csv  S397.csv  S398.csv  S399.csv  S40.csv  S402.csv  S403.csv  S404.csv  S405.csv  S407.csv  S408.csv  S411.csv  S413.csv  S414.csv
data/CR7/: S412.csv  S418.csv  S421.csv  S425.csv  S426.csv  S427.csv  S429.csv  S432.csv  S433.csv  S434.csv  S435.csv  S436.csv  S437.csv  S438.csv  S439.csv  S440.csv  S441.csv  S442.csv  S443.csv  S444.csv  S445.csv  S446.csv  S447.csv  S448.csv  S453.csv  S454.csv  S459.csv  S460.csv  S463.csv  S464.csv  S465.csv  S466.csv  S467.csv  S468.csv  S469.csv
data/DR1/: S11.csv  S14.csv  S15.csv  S20.csv  S38.csv  S39.csv  S51.csv  S52.csv  S54.csv  S55.csv  S56.csv  S57.csv  S61.csv  S62.csv  S63.csv  S64.csv  S65.csv  S66.csv  S67.csv  S68.csv  S72.csv  S74.csv  S75.csv  S76.csv  S77.csv  S78.csv  S79.csv  S80.csv  S81.csv  S82.csv  S83.csv
data/DR2/: S100.csv  S101.csv  S102.csv  S103.csv  S104.csv  S105.csv  S106.csv  S107.csv  S108.csv  S109.csv  S110.csv  S111.csv  S112.csv  S113.csv  S32.csv  S49.csv  S53.csv  S84.csv  S87.csv  S88.csv  S90.csv  S91.csv  S92.csv  S93.csv  S94.csv  S95.csv  S96.csv  S97.csv  S98.csv  S99.csv
data/Stanford/: S760.csv  S761.csv  S762.csv  S763.csv  S764.csv  S765.csv  S766.csv  S767.csv  S768.csv  S769.csv  S770.csv  S771.csv  S772.csv  S773.csv  S774.csv  S775.csv  S776.csv  S777.csv  S778.csv  S779.csv  S780.csv  S781.csv  S782.csv  S783.csv  S784.csv  S785.csv  S786.csv  S787.csv  S788.csv  S789.csv  S790.csv  S791.csv  S792.csv  S793.csv  S794.csv  S795.csv  S796.csv  S797.csv  S798.csv  S799.csv  (+115 more)
data/Tel Aviv/: S136.csv  S137.csv  S138.csv  S139.csv  S141.csv  S142.csv  S143.csv  S144.csv  S145.csv  S146.csv  S148.csv  S150.csv  S151.csv  S152.csv  S153.csv  S154.csv  S155.csv  S156.csv  S157.csv  S158.csv  S159.csv  S160.csv  S162.csv  S163.csv  S164.csv  S165.csv  S166.csv  S167.csv  S168.csv  S169.csv  S170.csv  S171.csv  S172.csv  S173.csv  S174.csv  S176.csv  S178.csv  S179.csv  S180.csv  S181.csv  (+111 more)
data/UNC/: S4001.csv  S4002.csv  S4004.csv  S4005.csv  S4006.csv  S4008.csv  S4010.csv  S4011.csv  S4012.csv  S4014.csv  S4016.csv  S4017.csv  S4019.csv  S4020.csv  S4021.csv  S4022.csv  S4023.csv  S4024.csv  S4027.csv  S4028.csv  S4029.csv  S4031.csv  S4032.csv  S4035.csv  S4036.csv  (+136 more)
tables/: DR1_stopping_results.csv  DR2_stopping_results.csv  Stanford_stopping_results.csv  Tel Aviv_stopping_results.csv  UNC_stopping_results.csv  table1.csv  table2.csv  tableS1.csv  tableS2.csv  tableS3.csv  tableS4.csv  tableS5.csv  tableS6.csv  tableS7.csv
tests/: test_anova.py  test_avg_ssd.py  test_calculate_mean_rts.py  test_equivalence.py  test_equivalence_testing.py  test_exclusion_criteria.py  test_nth_rt.py  test_p_respond.py  test_phase3.py  test_rm_anova.py  test_some_things.py  test_ssrt.py
(+40 files in other folders)
