[project]
name = "InhibitionInducedDevaluation"
version = "0.1.0"
description = "This project is looking to see whether inhibition induced devaluation occurs in three direct registered replications of Wessel and colleagues (2014)"
readme = "README.md"
authors = [
    { name = "Kriti Achyutuni", email = "kritiach@stanford.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<2.2.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.4",
    "ruff>=0.11.2",
]

[project.scripts]
uv-cookie = "uv_cookie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501", "W", "N", "R", "I"]

[tool.pytest.ini_options]
testpaths=['tests']

[tool.pyright]
exclude = ['.venv']
venvPath = '.'
venv = '.venv'

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["inhibition_induced_devaluation"]

[tool.hatch.build.targets.wheel]
packages = ["src/inhibition_induced_devaluation"]
